--- a/src/stylesheet/main.css
+++ b/src/stylesheet/main.css
@@ -1,2 +1,22 @@
 @tailwind preflight;
 @tailwind utilities;
+
+*:focus {
+  outline:0;
+}
+
+.search {
+  @apply .border .rounded .py-2 .pr-4 .pl-4 .mx-px .bg-white .appearance-none .text-xs;
+}
+
+.btn {
+  @apply .rounded .py-2 .px-4 .font-light .text-xs;
+}
+
+.btn-dark-blue {
+  @apply .border .text-white .border-blue .bg-blue;
+}
+
+.btn-dark-blue:hover {
+  @apply .bg-blue-dark .text-white .border-transparent;
+}
