Create list of links inside content Add search input to link references

--- a/src/stylesheet/main.css
+++ b/src/stylesheet/main.css
@@ -20,3 +20,8 @@
 .btn-dark-blue:hover {
   @apply .bg-blue-dark .text-white .border-transparent;
 }
+
+
+.hover\:border-l-4:hover {
+  border-left-width: 4px;
+}
